--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#317EFB">
   
   <link rel="manifest" href="Manifest.webManifest" />
-
+<link rel="icon" href="icon-192x192.png"type="image/png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
 
@@ -45,6 +45,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="db.js"></script>
   <script src="index.js"></script>
   <script>
    if ("serviceWorker" in navigator) 
